--- a/travelling/src/main/resources/application.yml
+++ b/travelling/src/main/resources/application.yml
@@ -19,3 +19,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         "[format_sql]": false
     show-sql: false
+
+rsa:
+  private-key: classpath:certs/private.pem
+  public-key: classpath:certs/public.pem
