build(test): updates test configuration

--- a/travelling/src/test/resources/application.yml
+++ b/travelling/src/test/resources/application.yml
@@ -6,7 +6,7 @@ server:
 logging:
   level:
     "[org.hibernate.SQL]": DEBUG
-    "[org.hibernate.type]": TRACE
+    "[org.hibernate.type.descriptor.sql]": TRACE
 
 spring:
   datasource:
@@ -16,9 +16,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         "[format_sql]": true
     show-sql: true
+
+  sql:
+    init:
+      mode: always
