--- a/travelling/src/test/resources/application.yml
+++ b/travelling/src/test/resources/application.yml
@@ -26,3 +26,7 @@ spring:
   sql:
     init:
       mode: always
+
+rsa:
+  private-key: classpath:certs/private.pem
+  public-key: classpath:certs/public.pem
