test(user): acceptance test for 'UserApi'

--- a/travelling/src/test/resources/application.yml
+++ b/travelling/src/test/resources/application.yml
@@ -1,7 +1,11 @@
+debug: false
+
 server:
   error:
     include-message: always
     include-binding-errors: always
+  servlet:
+    context-path: /api
 
 logging:
   level:
